2019-03-19  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 07-02-00.
	* February update of publications.
	* Run 2 detector description added.
	* Update ATLAS-SUSY.bib and ATLAS-useful.bib.
2019-02-28  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 07-01-01.
	* Update ATLAS-SUSY.bib with correct Errata format and other fixes.
2019-02-22  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 07-01-00.
	* January update of publications.
	* Add option backref to atlasbiblatex.
	* Add commented out authorlist to paper template.
	* Add INT note templates for SUSY group. These are a WIP and subject to further change.
2019-01-11  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 07-00-00.
	* November update of publications.
	* Rewrite macros for creating cover and title pages.
	Copyright notice should now always be correctly positioned.
	Less space used for title etc.
	Tweaking of offsets should no longer be necessary.
	Warnings about overfull hboxes fixed.
	Previous version available as atlasdoc2.cls and atlascover2.sty.
	* Add \JHEP as a journal.
	* Always use paper=letter option for US paper size.
	* Some tweaks so turning on language editor comments should not change text width.

2018-11-30  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 06-00-00.
	* October update of publications.
	* Number and unit spacing in bib files changed to ~ instead of \;.
	* Use \text instead of \mbox, \textrm, \mathrm in bib files.
	* Use \(...\) instead of $...$ in template and bib files.
	* Use firstinits instead of giveninits as biblatex option for TeX Live < 2016 instead of 2015.
	* Moved atlaslatex_update.sh script to scripts subdirectory.
	* Added a script tex_dollars.py to convert $...$ to \(...\).

2018-10-29  Ian Brock  <Ian.Brock@cern.ch>
	* Tag as version 05-09-00.
	* September update of publications.
	* Add INT note templates for EXOT group. These are a WIP and subject to further change.
	* Updated acknowledgements.
2018-10-11  Ian Brock  <Ian.Brock@cern.ch>