@@ -493,7 +493,7 @@
 
 @Article{Frixione:2007vw,
       author         = "Frixione, Stefano and Nason, Paolo and Oleari, Carlo",
-      title          = "{Matching NLO QCD computations with Parton Shower
+      title          = "{Matching NLO QCD computations with parton shower
                         simulations: the POWHEG method}",
       journal        = "JHEP",
       volume         = "11",
@@ -676,16 +676,26 @@
 % Asymptotic formulae
 @Article{Cowan:2010js,
    Author = {Cowan, Glen and Cranmer, Kyle and Gross, Eilam and Vitells, Ofer},
+   Title = {{Asymptotic formulae for likelihood-based tests of new physics}},
+   Journal = {Eur. Phys. J. C},
+   Volume = {71},
+   Year = {2011},
+   Pages = {1554},
+   doi = "10.1140/epjc/s10052-011-1554-0",
    Eprint = "1007.1727",
    Archiveprefix = {arXiv},
    Primaryclass = {physics.data-an},
+   related = "Cowan:2010js-err",
+   relatedstring  = "Erratum:",
+}
+
+@Article{Cowan:2010js-err,
+   Author = {Cowan, Glen and Cranmer, Kyle and Gross, Eilam and Vitells, Ofer},
    Journal = {Eur. Phys. J. C},
-   Pages = {1554},
-   doi = "10.1140/epjc/s10052-011-1554-0",
-   Title = {{Asymptotic formulae for likelihood-based tests of new physics}},
-   Volume = {71},
-   Year = {2011},
-   Addendum = "Erratum: \href{http://dx.doi.org/10.1140/epjc/s10052-013-2501-z}{Eur. Phys. J. C {\textbf{73}} (2013) 2501}"
+   Volume = {73},
+   Year = {2013},
+   Pages = {2501},
+   doi = "10.1140/epjc/s10052-013-2501-z",
 }
 
 % RooFit
