@@ -31,11 +31,11 @@ three large air-core toroidal superconducting magnets with eight coils each.
 The field integral of the toroids ranges between \num{2.0} and \SI{6.0}{\tesla\metre}
 across most of the detector. 
 The muon spectrometer includes a system of precision tracking chambers and fast detectors for triggering.
-A three-level trigger system is used to select events.
+A two-level trigger system is used to select events.
 The first-level trigger is implemented in hardware and uses a subset of the detector information
 to reduce the accepted rate to at most nearly \SI{100}{\kHz}.
-This is followed by two software-based trigger levels that
-together reduce the accepted event rate to \SI{1}{\kHz} on average
+This is followed by a software-based trigger that
+reduces the accepted event rate to \SI{1}{\kHz} on average
 depending on the data-taking conditions.
 
 
